Refactored the decoder to move all decoders to different source files.

--- a/tools/efm-decoder/CMakeLists.txt
+++ b/tools/efm-decoder/CMakeLists.txt
@@ -1,11 +1,9 @@
 # Set the target name
 set(TARGET_NAME efm-decoder)
 
-add_executable(${TARGET_NAME}
-    src/main.cpp
-    src/efm_processor.cpp
-    src/decoders.cpp
-)
+# Add the source files
+file(GLOB_RECURSE SRC_FILES ${CMAKE_SOURCE_DIR}/tools/efm-decoder/src/*.cpp)
+add_executable(${TARGET_NAME} ${SRC_FILES})
 
 # Find the Qt library
 find_package(Qt5 REQUIRED COMPONENTS Core Widgets)
