Added abs and frame time - plus some statistics in section to F2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "cstdint": "cpp",
-        "bch_test.C": "cpp"
+        "bch_test.C": "cpp",
+        "bitset": "cpp",
+        "string_view": "cpp"
     }
 }
