Included the Qt/C++ clang configuration file and applied clang formating on all source (to get more in-line with the recommended style guide)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "chrono": "cpp",
         "random": "cpp",
         "limits": "cpp"
-    }
+    },
+    "C_Cpp.clang_format_fallbackStyle": "none"
 }
