Get the encoder compiling again with the updated library styles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,5 +25,5 @@ add_compile_definitions(APP_COMMIT=\"${GIT_COMMIT_HASH}\")
 
 # Add subdirectories
 add_subdirectory(libs/efm)
-#add_subdirectory(tools/efm-encoder)
+add_subdirectory(tools/efm-encoder)
 add_subdirectory(tools/efm-decoder)
