--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,4 @@ add_compile_definitions(APP_COMMIT=\"${GIT_COMMIT_HASH}\")
 
 # Add subdirectories
 add_subdirectory(tools/efm-decoder)
-#add_subdirectory(tools/efm-sector-decoder)
+add_subdirectory(tools/efm-sector-decoder)
