--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
         "rscompare.C": "cpp",
         "rskey.C": "cpp",
         "rspwd_test.C": "cpp",
-        "rs_base": "cpp"
+        "rs_base": "cpp",
+        "string": "cpp"
     },
     "C_Cpp.clang_format_fallbackStyle": "none"
 }
