Quite a bit of bug fixing and F2 section correction improvements.  Added sector unscramble code.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,9 @@
         "rskey.C": "cpp",
         "rspwd_test.C": "cpp",
         "rs_base": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "*.tcc": "cpp",
+        "vector": "cpp"
     },
     "C_Cpp.clang_format_fallbackStyle": "none"
 }
