Moved library includes and source into an actual library ready to add more executables to the build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,5 @@ add_compile_definitions(APP_BRANCH=\"${GIT_BRANCH}\")
 add_compile_definitions(APP_COMMIT=\"${GIT_COMMIT_HASH}\")
 
 # Add subdirectories
+add_subdirectory(libs/efm)
 add_subdirectory(tools/efm-decoder)
