Split t-values to F2 Section into it's own application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_compile_definitions(APP_COMMIT=\"${GIT_COMMIT_HASH}\")
 # Add subdirectories
 add_subdirectory(libs/efm)
 add_subdirectory(tools/efm-decoder)
+add_subdirectory(tools/efm-decoder-f2)
