--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,4 @@ add_compile_definitions(APP_COMMIT=\"${GIT_COMMIT_HASH}\")
 add_subdirectory(libs/efm)
 add_subdirectory(tools/efm-decoder)
 add_subdirectory(tools/efm-decoder-f2)
+add_subdirectory(tools/efm-decoder-d24)
