Added efm-decode-audio to decode Data24 to wav

--- a/tools/efm-decoder-audio/CMakeLists.txt
+++ b/tools/efm-decoder-audio/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Set the target name
-set(TARGET_NAME efm-decoder)
+set(TARGET_NAME efm-decoder-audio)
 
 # Find the Qt library
 set(CMAKE_AUTOMOC ON)
