--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,9 @@
         "charconv": "cpp",
         "format": "cpp",
         "bchsimple.C": "cpp",
-        "ezcod_test.C": "cpp"
+        "ezcod_test.C": "cpp",
+        "initializer_list": "cpp",
+        "span": "cpp"
     },
     "C_Cpp.clang_format_fallbackStyle": "none"
 }
