Basic outline of F2 stacker application just for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ add_subdirectory(tools/efm-decoder-f2)
 add_subdirectory(tools/efm-decoder-d24)
 add_subdirectory(tools/efm-decoder-audio)
 add_subdirectory(tools/efm-decoder-data)
+add_subdirectory(tools/efm-stacker-f2)
