Missed the build env changes in the last commit - correcting now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,4 @@ add_subdirectory(tools/efm-decoder-d24)
 add_subdirectory(tools/efm-decoder-audio)
 add_subdirectory(tools/efm-decoder-data)
 add_subdirectory(tools/efm-stacker-f2)
+add_subdirectory(tools/vfs-verifier)
